<resources>
    <string name="app_name">Sensor Record</string>

    <!-- Login activity -->
    <string name="title_activity_login">Log in</string>
    <string name="login_title">Log in</string>
    <string name="hint_username">Username</string>
    <string name="login_button_text">Log in</string>

    <!-- Snackbars -->
    <string name="snackbar_request_permission">Request</string>
    <string name="snackbar_dismiss">Dismiss</string>

    <!-- Permissions -->
    <string name="permission_explain">Hardware permissions required for this app to work</string>
    <string name="permission_explain_gps">Location data permission required for GPS access</string>
    <string name="permission_explain_write_storage">Storage write permission required to save data</string>
    <string name="permission_explain_wake_lock">Wake lock permission required to record sensor data</string>

    <!-- Navigation drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_new">New</string>
    <string name="nav_start">Start</string>
    <string name="nav_save">Save &amp; Quit</string>
    <string name="nav_raw">Raw Data</string>
    <string name="nav_gps">GPS</string>
    <string name="nav_accelerometer">Accelerometer</string>
    <string name="nav_gravity">Gravity</string>
    <string name="nav_gyroscope">Gyroscope</string>

    <!-- Settings menu -->
    <string name="settings_menu_settings">Settings</string>
    <string name="settings_menu_device_info">Device Info</string>
    <string name="settings_menu_about">About</string>

    <!-- New participant fragment-->
    <string name="input_text_ra">Research Assistant</string>
    <string name="input_text_subnum">Subject Number</string>
    <string name="input_text_condition">Condition</string>
    <string name="input_text_age">Age</string>
    <string name="input_text_height">Height:</string>
    <string name="input_text_height_cm">centimeters</string>
    <string name="input_text_height_ft">feet</string>
    <string name="input_text_height_in">inches</string>
    <string name="new_height_ft_symbol">\'</string>
    <string name="new_height_in_symbol">\"</string>
    <string name="input_text_sex">Sex:</string>
    <string name="new_sex_male_label">Male</string>
    <string name="new_sex_female_label">Female</string>
    <string name="input_button_save">Create</string>

    <!-- Raw sensor data fragment -->
    <string name="raw_acc_header">Accelerometer</string>
    <string name="raw_acc_world_header">Accelerometer (world basis)</string>
    <string name="raw_gyro_header">Gyroscope</string>
    <string name="raw_rotation_header">Rotation Matrix</string>

    <!-- Subject info fragment -->
    <string name="subInfo_label_date">Date:</string>
    <string name="subInfo_label_ra">Research Assistant:</string>
    <string name="subInfo_label_subNum">Subject Number:</string>
    <string name="subInfo_label_condition">Condition:</string>
    <string name="subInfo_label_age">Age:</string>
    <string name="subInfo_label_sex">Sex:</string>
    <string name="subInfo_label_height">Height:</string>
    <string name="subInfo_label_height_unit">cm</string>
    <string name="subInfo_label_delete_button">Delete subject</string>
    <string name="subInfo_message_recording">(Cannot delete while recording data)</string>

    <!-- Start fragment -->
    <string name="start_label_subNum">Subject Number:</string>
    <string name="start_button_label_start">Start</string>
    <string name="start_button_label_stop">Stop</string>
    <string name="start_recording_complete">Recording complete.</string>
    <string name="start_recording">Recording…</string>
    <string name="start_recording_progress">(recording in progress)</string>

    <!-- Save fragment -->
    <string name="save_button_text">Save &#038; Quit</string>
    <string name="save_button_text_quit">Quit</string>
    <string name="save_instruction_text">Sensor data collected. Click to save the data and quit the current session:</string>
    <string name="save_no_data_text">No sensor data collected. Click to quit the current session:</string>
    <string name="save_message_recording">Cannot save or quit while recording data</string>

    <!-- About popup window -->
    <string name="button_close">Close</string>
    <string name="about_app_name_label">Name:</string>
    <string name="about_app_version_label">Version:</string>
    <string name="about_app_website_label">Website:</string>
    <string name="about_website_link">https://github.com/image0of0pie/project_app</string>

    <!-- Device information popup window -->
    <string name="device_info_title">Device Information</string>
    <string name="device_model_label">Model:</string>
    <string name="device_android_version_label">Android version:</string>

    <string name="device_sensors_label">Sensors:</string>
    <string name="device_sensors_explanation">(availability and hardware vendor)</string>

    <string name="device_accelerometer_label">Accelerometer:</string>
    <string name="device_gyroscope_label">Gyroscope:</string>
    <string name="device_gravity_label">Gravity:</string>
    <string name="device_magnetometer_label">Magnetometer:</string>
    <string name="recording_frequency">Recording frequency(1,15)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Instructions">Instrcution: \n
                                *All the fields in the next page are necessary for project\n
                                *In the first field named as Context info, enter a brief description of your current context
                                 ex- sleeping in room , walking near a road etc\n
                                * In the second field enter a unique code asap the context as given below\n
                                * In the frequency field fill \'10\' ,\'25\' or \'20\' as informed\n
                                * In the upcoming fields fill as per your personal info\n
                                  (bcoz. they are not important for project)\n
                                * After that click on \'CREATE REPORT\' button to form a subject.\n
                                * When you are ready for collecting the data, choose start option from side menu and click on Start\n
                                * After you have collected the data click on save and quit and choose yes to exit.\n
                                Context Code:\n
                                    WALKING:
                                        * 11. Walking on ststairs\n
                                        * 12. Walking in corridor\n
                                        * 13. Walking nearby road\n
                                        * 14. Walking in playground\n
                                    CLASSROOM:
                                        * 21. Sitting in Classroom\n
                                        * 22. Sitting in Canteen\n
                                        * 23. Sitting in car\n
                                        * 24. Sitting in train\n
                                        * 25. Sitting in auto-rickshaw\n
                                        * 26. Sitting in bus\n
                                    STANDING:
                                        * 31. Standing in train\n
                                        * 32. Standing in classroom\n
                                        * 33. Standing in bus\n
                                        * 34. Standing in playground\n
                                        * 35. Standing nearby road\n
                                    SLEEPING:
                                        * 41. Sleeping\n
                                    RUNNING:
                                        * 51. Running in playground\n
                                        * 52. Running nearby road
                                            THANKS FOR HELPING</string>
    <string name="Contexts"></string>



</resources>
