<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Participant">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_new"
                    android:icon="@android:drawable/ic_menu_add"
                    android:title="@string/nav_new" />
                <item
                    android:id="@+id/nav_start"
                    android:icon="@android:drawable/ic_media_play"
                    android:title="@string/nav_start" />
                <item
                    android:id="@+id/nav_save"
                    android:icon="@android:drawable/ic_menu_save"
                    android:title="@string/nav_save" />
            </group>
        </menu>
    </item>

</menu>
